Branch overlapping fixed
 - Removing transition - Animation no necessary on background change
 - Refactoring - Code for generate branches moved to different file
 - Refactoring - Magic numbers were assigned to variables
 - Name refactoring from 'utils.diagram' to 'utils'

--- a/src/client/app/flogo.flows.detail.diagram/components/diagram.component.less
+++ b/src/client/app/flogo.flows.detail.diagram/components/diagram.component.less
@@ -490,7 +490,6 @@
       margin: 0;
       bottom: -10px;
       right: 2px;
-      transition: all 250ms linear;
       width: 95px;
 
       .img-left,
